# econtools_marketplace

./: .gitignore  NAMESPACE-MIGRATION.md  README.md
.claude-plugin/: marketplace.json
analytics-toolkit/: README.md
analytics-toolkit/.claude-plugin/: plugin.json
analytics-toolkit/skills/dependency-tracker/: SKILL.md
analytics-toolkit/skills/r-parallel/: SKILL.md
analytics-toolkit/skills/r-parallel/references/: future-patterns.md  pitfalls.md  seed-handling.md
analytics-toolkit/skills/r-style/: SKILL.md
analytics-toolkit/skills/r-style/references/: smell-catalog.md  style-guide.md  verification.md
analytics-toolkit/skills/renv-manager/: SKILL.md
manuscript-tools/: README.md  pixi.toml
manuscript-tools/.claude-plugin/: plugin.json
manuscript-tools/mcps/: MIGRATION_COMPLETE.md  README.md
manuscript-tools/mcps/bibtex-mcp/: CHANGELOG.md  README.md  pyproject.toml
manuscript-tools/mcps/bibtex-mcp/src/bibtex_mcp/: __init__.py  client.py  server.py
manuscript-tools/mcps/bibtex-mcp/tests/: conftest.py  test_client.py  test_scan_citations_comprehensive.py
manuscript-tools/mcps/crossref-mcp/: CHANGELOG.md  LICENSE  README.md  pyproject.toml
manuscript-tools/mcps/crossref-mcp/src/crossref_mcp/: __init__.py  client.py  server.py
manuscript-tools/mcps/crossref-mcp/tests/: conftest.py  test_client.py
manuscript-tools/skills/aer-figures/: SKILL.md
manuscript-tools/skills/aer-figures/references/: aer-figure-specs.md  ggplot-patterns.md
manuscript-tools/skills/aer-tables/: SKILL.md
manuscript-tools/skills/aer-tables/references/: aer-style-guide.md  r-code-patterns.md
manuscript-tools/skills/bibtex-curator/: SKILL.md
manuscript-tools/skills/bibtex-curator/references/: api-lookups.md  citation-patterns.md
manuscript-tools/skills/bibtex-curator/references-legacy/: README.md  bibtex-formats.md
manuscript-tools/skills/bibtex-janitor/: README.md  SKILL.md  clean_bib.py
manuscript-tools/skills/bibtex-janitor/tests/: test_clean_bib.py  test_integration.py
manuscript-tools/skills/bibtex-janitor/tests/fixtures/: messy.bib  real_world.bib  sample.bib
manuscript-tools/skills/notation-guardian/: SKILL.md
manuscript-tools/skills/notation-guardian/references/: detection-patterns.md  econ-conventions.md  registry-format.md
manuscript-tools/skills/palette-designer/: SKILL.md  preview-template.html
manuscript-tools/skills/palette-designer/hooks/: generate-preview.sh  hooks.json
manuscript-tools/skills/proof-checker/: SKILL.md
manuscript-tools/skills/proof-checker/references/: common-errors.md  crossref-validation.md  style-rules.md
manuscript-tools/skills/visual-sync/: SKILL.md
