[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "bibtex-mcp"
version = "0.1.0"
description = "MCP server for local BibTeX file operations and citation scanning"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "halidaee"}
]
keywords = ["mcp", "bibtex", "citations", "bibliography", "academic", "research"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "fastmcp>=2.0",
    "pybtex>=0.24",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=4.0",
]

[project.urls]
Homepage = "https://github.com/halidaee/bibtex-mcp"
Repository = "https://github.com/halidaee/bibtex-mcp"
Issues = "https://github.com/halidaee/bibtex-mcp/issues"
Changelog = "https://github.com/halidaee/bibtex-mcp/blob/main/CHANGELOG.md"

[project.scripts]
bibtex-mcp = "bibtex_mcp.server:main"

[tool.hatch.build.targets.wheel]
packages = ["src/bibtex_mcp"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-v --tb=short"
