[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "crossref-mcp"
version = "0.1.0"
description = "MCP server for the Crossref API"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "halidaee"}
]
keywords = ["mcp", "crossref", "citations", "bibliography", "academic", "research", "papers", "doi"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "fastmcp>=2.0",
    "httpx>=0.27",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "respx>=0.22",
    "pytest-cov>=4.0",
]

[project.urls]
Homepage = "https://github.com/halidaee/crossref-mcp"
Repository = "https://github.com/halidaee/crossref-mcp"
Issues = "https://github.com/halidaee/crossref-mcp/issues"
Changelog = "https://github.com/halidaee/crossref-mcp/blob/main/CHANGELOG.md"

[project.scripts]
crossref-mcp = "crossref_mcp.server:main"

[tool.hatch.build.targets.wheel]
packages = ["src/crossref_mcp"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-v --tb=short"
